<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".HandlerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_thread"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_thread"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/view_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/to_lower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_lower_case"/>

    <Button
        android:id="@+id/to_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_upper_case"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:textSize="@dimen/big_font_size"
        tools:text="Here will come the result"/>
</LinearLayout>
